Fix alignment and add hotkeys modal
- add labels to alignment
- align properly even if the element is rotated
- support ctrl in keyboard shortcuts for cmd alternative

--- a/src/App.css
+++ b/src/App.css
@@ -102,45 +102,19 @@ a {
   color: #fff !important;
 }
 
-.rangeslider .rangeslider__handle:active {
-  background: #999;
+kbd {
+  display: inline-block;
+  padding: 3px 5px;
+  font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+  line-height: 10px;
+  color: #444d56;
+  vertical-align: middle;
+  background-color: #fafbfc;
+  border: 1px solid #d1d5da;
+  border-radius: 6px;
+  box-shadow: inset 0 -1px 0 #d1d5da;
 }
-.rangeslider-horizontal {
-  height: 20px;
-  border-radius: 10px;
-}
-.rangeslider-horizontal .rangeslider__fill {
-  height: 100%;
-  background: #27ae60;
-  border-radius: 10px;
-  top: 0;
-}
-.rangeslider-horizontal .rangeslider__handle {
-  width: 40px;
-  height: 40px;
-  border-radius: 40px;
-  top: -10px;
-}
-.rangeslider-vertical {
-  margin: 20px auto;
-  height: 150px;
-  max-width: 10px;
-  background: none;
-}
-.rangeslider-vertical .rangeslider__fill {
-  width: 100%;
-  background: #27ae60;
-  box-shadow: none;
-  bottom: 0;
-}
-.rangeslider-vertical .rangeslider__handle {
-  width: 30px;
-  height: 10px;
-  left: -10px;
-}
-.rangeslider-vertical .rangeslider__handle:active {
-  box-shadow: none;
-}
+
 @media screen and (min-width: 1200px) {
   #mount {
     width: 600px;
