--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -111,3 +111,41 @@
   width: 150px;
   margin-right: 12px;
 }
+
+.hotkeysModalContainer {
+  min-width: 500px;
+  min-height: 250px;
+  background: #fff;
+  border-radius: var(--radius-3);
+  padding: var(--space-3);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.07);
+}
+
+.row {
+  display: flex;
+  justify-items: stretch;
+  margin-bottom: var(--space-2);
+}
+
+.keyShortcut {
+  display: flex;
+  width: 50%;
+  justify-content: flex-end;
+  padding-right: 12px;
+  font-size: var(--text-sm);
+  align-items: center;
+}
+
+.shortcutDescription {
+  display: flex;
+  width: 50%;
+  padding-left: 12px;
+  font-size: var(--text-sm);
+  align-items: center;
+}
